<resources>
    <string name="app_name">T-UI</string>
    <string name="location_off">Turn on GPS</string>
    <string name="share_label">Share</string>
    <string name="output_about">Francesco Andreuzzi (Italy)%n\t-> Programmer
        %n%nThanks to Luke Winward for his original idea</string>
    <string name="output_refresh">Refresh: apps, alias, music, contacts, rss feeds</string>
    <string name="output_rate">Thank you!</string>
    <string name="start_notification">T-UI started</string>
    <string name="tui_running">T-UI is running</string>
    <string name="admin_permission">Lock the screen on double tap</string>
    <string name="tui_reset">t-ui reset to default settings</string>
    <string name="copied">Copied:</string>
    <string name="tui_busy">t-ui is busy, use \"ctrl+c\" to stop the process</string>
    <string name="donate">Do you like my work? You can offer me a coffee (cmd: $ donate). Thank you!</string>
    <string name="open_file_chooser">Open file with…</string>
    <string name="weather_cant_update">You can\'t perform a manual update with the default key. You have to create a custom key on the website</string>
    <string name="weather_error">The weather API is busy. Trying again at:</string>
    <string name="weather_disabled">Weather is not enabled</string>
    <string name="weather_updated">Weather updated at</string>
    <string name="shortcut_index_greater">The index is greater than the shortcuts count</string>
    <string name="theme_applied">Theme applied:</string>
    <string name="reply_id_not_found">No bound app found with ID:</string>
    <string name="reply_notification_not_found">0 notifications from this app</string>
    <string name="exclude_notification">Exclude notification</string>
    <string name="exclude_app">Exclude app</string>
    <string name="reply_notification">Reply to the last notification</string>
    <string name="notification_service_not_running">The notification service is\'t running</string>
    <string name="invalid_regex">Invalid regex:</string>
    <string name="theme_not_found">Theme not found</string>
    <string name="theme_invalid">Invalid theme</string>
    <string name="theme_old_not_found">You don\'t have an old theme</string>
    <string name="theme_reverted">Reverted to the previous theme</string>
    <string name="theme_unable">Could not apply this theme</string>
    <string name="output_is_directory">This is a directory</string>
    <string name="output_file_not_found">File not found</string>
    <string name="notification_reader">T-UI notification reader</string>
    <string name="no_notification_access">Unfortunately t-ui can\'t redirect you to the \"Notification access\" page of your system settings</string>
    <string name="notification_low_api">Notifications are supported on Android 4.3+ only. Use \'config -set show_notifications false\' to disable this message</string>
    <string name="first_help_text">First time with t-ui?%n\ttutorial -> view the tutorial on GitHub%n\thelp     -> get a list of available commands</string>
    <string name="permissions_toast">You have to grant Storage permission</string>
    <string name="output_use_default_app">You can use \"apps -default_app\" instead</string>
    <string name="tui_folder_not_found">Your %1$s preferences could not be loaded because your \"t-ui\" folder is not readable at the moment (you should try to use the commandManager \"restart\")</string>
    <string-array name="hints">
        <item name="hint_twitter">Did you know? t-ui is on Twitter. Have a look (\"$ tui -twitter\")</item>
        <item name="hint_telegram">Did you know? There\'s a Telegram group with many enthusiastic users, where you can discuss, share and chat (\"$ tui -telegram\")</item>
        <item name="hint_tutorial">Did you read the tutorial? (\"$ tutorial\")</item>
        <item name="hint_theme">Did you know that you can easily switch your theme? Have a look at the cmd \"$ theme\"</item>
        <item name="hint_theme2">Did you know? You can create your custom theme and share it with other users. Have a look at the cmd \"$ theme -create\"</item>
        <item name="hint_help">Doubts about a commandManager? Use \"$ help cmdName\"</item>
        <item name="hint_music">Did you know? You can listen to music using t-ui. Have a look at the cmd \"$ music\"</item>
        <item name="hint_app_groups">Did you know? t-ui 6.4 introduced App Groups.%nYou can get more details with the cmd \"$ apps -tutorial\"</item>
        <item name="hint_notifications">Did you know? You can see your notifications inside t-ui. If you\'re interested, have a look at the tutorial: \"$ notifications -tutorial\"</item>
        <item name="hint_clear">Are you sick of clearing your screen? Have a look at the options \"clear_after_cmds\", \"clear_after_seconds\" and \"maxlines\"</item>
        <item name="hint_wallpaper">Do you want to use your wallpaper as t-ui background? Use the cmd: \"$ config -set system_wallpaper true\"</item>
        <item name="hint_config">Doubts about any config option? Use the cmd \"$ config -info [option]\"table</item>
        <item name="hint_alias">Did you know that t-ui supports aliases? For more info, use the cmd \"$ alias -tutorial\"</item>
        <item name="hint_exclude_notification">Did you know? You can exclude an unwanted notification by long-clicking on it</item>
        <item name="hint_disable">You can disable this messages with the cmd \"$ config -set show_hints false\"</item>
    </string-array>
    <string-array name="tutorial">
        <item>Use the commandManager \"help\" to get a list of available commands</item>
        <item>If you want to get info about the behavior of a commandManager, type \"help cmdName\"</item>
        <item>Launch your apps typing their name</item>
        <item>You can call your contacts with the cmd \"call contactName\"</item>
        <item>t-ui is highly customizable. Check \"config -ls\" or use the cmd \"config -tutorial\" to see what you can change</item>
        <item>You can choose within a large database of themes uploaded by t-ui users. Check the cmd \"theme -view\"</item>
        <item>Join our community! Google+, Twitter, Telegram and GitHub. Use the cmd \"tui\"</item>
    </string-array>
    <string name="output_app_not_found">Application not found</string>
    <string name="activity_not_found">Activity not found</string>
    <string name="app_installed">App installed:</string>
    <string name="app_uninstalled">App uninstalled:</string>
    <string name="app_shortcut_not_found">Shortcut not found</string>
    <string name="calling">Calling:</string>
    <string name="restarting">t-ui will be closed in some seconds. Click the home button to restart it</string>
    <string name="output_no_permissions">You did not grant the permission</string>
    <string name="output_waiting_permissions">Waiting permission</string>
    <string name="output_problem_camera">There was a problem while connecting to your device camera</string>
    <string name="output_invalid_argument">Invalid argument</string>
    <string name="output_too_few_arguments">Fewer arguments than expected</string>
    <string name="invalid_integer">Invalid integer</string>
    <string name="output_nothing_found">Not found</string>
    <string name="output_xml_error">There was an XML problem with your file %1$s, t-ui will use default values.%nFix or delete the file to recover your options.</string>
    <string name="output_xml_error_details">Error details:%n%1$s</string>
    <string name="output_invalid_color">Invalid color</string>
    <string name="output_group_not_found">Group not found</string>
    <string name="output_group_exists">This group already exists</string>
    <string name="output_group_space">Spaces are not allowed inside group names</string>
    <string name="output_notification_error">The notification service could not be started:</string>
    <string name="reply_app_not_found">Unable to find bound app:</string>
    <string name="no_internet">No internet access</string>
    <string name="invalid_number">Invalid number</string>
    <string name="output_error">An unknown error occurred</string>
    <string name="internet_error">Internet error. Response code:</string>
    <string name="no_result">No results</string>
    <string name="unavailable_name">Name unavailable</string>
    <string name="invalid_name">Invalid name</string>
    <string name="api_low">Low Android version</string>
    <string name="invalid_data_store_type">Invalid type</string>
    <string name="location_error">Unable to get your location</string>
    <string name="note_not_found">Note not found</string>
    <string name="row_used">This row is busy</string>
    <string name="note_max_reached">Your notes reached the value set in notes_max_lines. You can scroll to see them all, change the value, or disable this message (ui.xml: show_scroll_notes_message).</string>
    <string name="id_already">Busy ID</string>
    <string name="id_not_found">Invalid ID</string>
    <string name="rss_not_found">Invalid ID: no RSS feed found</string>
    <string name="rss_never_checked">This RSS feed has not been checked yet</string>
    <string name="rss_invalid_time_format">The time format could not be parsed</string>
    <string name="rss_invalid_date">Invalid publication date tag:</string>
    <string name="rss_invalid_entry_tag">Invalid entry tag:</string>
    <string name="rss_invalid_empty">Invalid RSS: the file is empty:</string>
    <string name="output_alias_not_found">Alias not found:</string>
    <string name="output_problem_adding_alias">There was a problem with your alias</string>
    <string name="output_problem_adding_alias_same_name">The name of your alias (%1$s) is equal to its value. This may lead to bad behaviors, so it has been excluded. You should edit the name to use it.</string>
    <string name="output_problem_adding_alias_same_name_before_equals">The name of your alias (%1$s) is equal to the part of its value before the first space (i.e. aliasName=play ; aliasValue = play store). This may lead to crashes and freezes, so it has been excluded. You should edit the name to use it.</string>
    <string name="help_tuixt_help">Print the list of commands, or info about a commandManager
        %n%nUsage:%n
        help [commandManager]
        %n%nExample:
        %n$ help exit
    </string>
    <string name="help_tuixt_exit">Exit from tuixt</string>
    <string name="help_tuixt_save">Save changes</string>
    <string name="tuixt_back_pressed">You pressed the back key</string>
    <string name="tuixt_saved">Saved</string>
    <string name="tuixt_reading">Reading</string>
    <string name="tuixt_label">TUIXT</string>
    <string name="tuixt_error">This file is too big, consider opening it with an other text editor</string>
    <string name="output_wifi">WiFi active:</string>
    <string name="output_data">Mobile Data active:</string>
    <string name="output_bluetooth">Bluetooth active:</string>
    <string name="output_bluetooth_unavailable">Bluetooth is not available on this device</string>
    <string name="output_airplane">Airplane mode active:</string>
    <string name="output_playing">Playing:</string>
    <string name="output_stopped">Player stopped</string>
    <string name="output_song_not_found">Song not found</string>
    <string name="output_music_disabled">enable_music is false</string>
    <string name="no_songs">0 songs found</string>
    <string name="output_command_not_found">Command not found.%nTry to use \"$ help\" or \"$ tutorial\"</string>
    <string name="previous_command">Previous command</string>
    <string name="clear_input">Clear input</string>
    <string name="next_command">Next command</string>
    <string name="terminal_content_description">Output from the terminal</string>
    <string name="terminal_input_line">Terminal input line</string>
    <string name="submit_command">Submit command</string>
</resources>