<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/input_down_layout">

    <HorizontalScrollView
        android:id="@+id/suggestions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:focusable="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/suggestions_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/tools_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/suggestions_container"

        android:orientation="horizontal"

        android:weightSum="@integer/tools_view_weightsum">

        <ImageButton
            android:id="@+id/delete_view"
            style="@style/ToolsBar"
            android:contentDescription="@string/clear_input"
            android:src="@drawable/ic_clear" />

        <ImageButton
            android:id="@+id/back_view"
            style="@style/ToolsBar"
            android:contentDescription="@string/previous_command"
            android:src="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/next_view"
            style="@style/ToolsBar"
            android:contentDescription="@string/next_command"
            android:src="@drawable/ic_next" />

        <ImageButton
            android:id="@+id/paste_view"
            style="@style/ToolsBar"
            android:contentDescription="@android:string/paste"
            android:src="@drawable/ic_paste" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tools_view"
        android:gravity="center_vertical"

        android:orientation="horizontal"

        android:weightSum="@integer/input_group_weightsum">

        <ohi.andre.consolelauncher.tuils.OutlineTextView
            android:id="@+id/prefix_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ohi.andre.consolelauncher.tuils.OutlineEditText
            android:id="@+id/input_view"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="@integer/input_view_weight"

            android:background="@null"
            android:hint="@string/terminal_input_line"

            android:imeOptions="actionGo|flagNoFullscreen"

            android:importantForAutofill="no"
            android:lines="1"
            android:maxWidth="488dp"
            android:singleLine="true"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="#546E7A"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/enter_view_weight"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/submit_tv"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:background="@null"
                android:contentDescription="@string/submit_command"
                android:src="@drawable/ic_enter" />

        </LinearLayout>

    </LinearLayout>

    <ohi.andre.consolelauncher.tuils.TerminalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@id/input_group"

        android:fillViewport="true"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ohi.andre.consolelauncher.tuils.OutlineTextView
                android:id="@+id/terminal_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:contentDescription="@string/terminal_content_description"
                android:gravity="bottom"
                android:textIsSelectable="true" />

        </LinearLayout>

    </ohi.andre.consolelauncher.tuils.TerminalScrollView>

</RelativeLayout>